@@ -1,4 +1,6 @@
 v2.10.1
+  * adjusted apdex scores to reflect time spent in the mongrel queue
+  * fixed incompatibility with JRuby on startup
   * implmented CPU measure for JRuby which reflects the cpu burn for
     all controller actions (does not include background tasks)
   * fixed scope issue with GC instrumentation, subtracting time from caller
